# macnamara_sim

./: README.md  app.py  pyproject.toml  requirements.txt  run_election.py
