[project]
name = "prahran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "highcharts-core>=1.10.1",
    "jupyter>=1.1.1",
    "lxml>=5.3.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.40.2",
    "votekit>=3.1.0",
]
